fix z-index

--- a/src/sites/App/App.css
+++ b/src/sites/App/App.css
@@ -154,6 +154,7 @@ section[data-title]::before {
     left: 0;
     width: 100vw;
     height: 100vh;
+    z-index: 3;
 }
 
 .modal-container {
